--- a/recipes/veg-chili.html
+++ b/recipes/veg-chili.html
@@ -10,6 +10,55 @@
 
 <body>
     <h1> Comforting Vegetarian Chili</h1>
+    <img src="../recpie-img/veg-chili.jpeg" width="525" height="350" alt="Vegetarian chili with black beans
+    and tomatoes, topped with melted cheese,">
+
+    <h2>Description</h2>
+        <p>This chili isn't just for the vegetarians! Packed with protien and flavor, this dish is best enjoyed in the 
+            cooler seasons of autumn or winter (though you could eat it year round as well).</p>
+        <p>You can aslo easily modify the recipe to your tastes. If you aren't a fan of vegetarian meat substitues, simply omit it.
+            It can be made vegan by leaving out the cheese. Feel free to get creative with the seasonings as well!
+        </p>
+
+    <h2>Ingredients</h2>
+        <ul>
+            <li>1 tablespoon olive oil</li>
+            <li>½ medium onion, chopped</li>
+            <li>2 tablespoons dried oregano</li>  
+            <li>1 tablespoon salt</li>
+            <li>1 teaspoon ground cumin</li>
+            <li>2 bay leaves</li>   
+            <li>2 stalks celery, chopped</li>
+            <li>2 green bell peppers, chopped</li>
+            <li>2 jalapeno peppers, chopped</li>
+            <li>3 cloves garlic, chopped</li>
+            <li>2 (4 ounce) cans chopped green chile peppers, drained</li>
+            <li>2 (12 ounce) packages vegetarian burger crumbles</li>
+            <li>3 (28 ounce) cans whole peeled tomatoes, crushed</li>
+            <li>¼ cup chili powder</li>
+            <li>1 tablespoon ground black pepper</li>
+            <li>1 (15 ounce) can kidney beans, drained</li>
+            <li>1 (15 ounce) can garbanzo beans, drained</li>
+            <li>1 (15 ounce) can black beans</li>
+            <li>1 (15 ounce) can whole kernel corn</li>
+            <li>(Optional) Grated cheese and sour cream for serving</li>
+        </ul>
+
+    <h2>Steps</h2>
+        <ol>
+            <li>Heat olive oil in a large pot over medium heat. Stir in onion
+                and season with oregano, salt, cumin, and bay leaves. Cook
+                and stir until onion is tender; stir in celery, green bell
+                peppers, jalapeños, and garlic. Add green chile peppers and
+                cook until heated through. Stir in vegetarian burger crumbles; 
+                reduce heat to low, cover pot, and simmer for 5 minutes.</li>
+            <li>Stir in tomatoes; season with chili powder and black pepper. 
+                Stir in kidney beans, garbanzo beans, and black beans. Bring 
+                to a boil, reduce heat to low, and simmer for 45 minutes.</li>
+            <li>Stir in the corn, and continue cooking for 5 minutes before 
+                serving.</li>
+
+        </ol>
     
 </body>
 </html>
