--- a/recipes/veg-chili.html
+++ b/recipes/veg-chili.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1> Comforting Vegetarian Chili</h1>
-    <img src="../recpie-img/veg-chili.jpeg" width="525" height="350" alt="Vegetarian chili with black beans
+    <img src="../recipe-img/veg-chili.jpeg" width="525" height="350" alt="Vegetarian chili with black beans
     and tomatoes, topped with melted cheese,">
 
     <h2>Description</h2>
@@ -57,7 +57,6 @@
                 to a boil, reduce heat to low, and simmer for 45 minutes.</li>
             <li>Stir in the corn, and continue cooking for 5 minutes before 
                 serving.</li>
-
         </ol>
     
 </body>
