add two new recipe pages

--- a/recipes/veg-chili.html
+++ b/recipes/veg-chili.html
@@ -19,6 +19,7 @@
         <p>You can aslo easily modify the recipe to your tastes. If you aren't a fan of vegetarian meat substitues, simply omit it.
             It can be made vegan by leaving out the cheese. Feel free to get creative with the seasonings as well!
         </p>
+        <p><a href="https://www.allrecipes.com/recipe/72508/the-best-vegetarian-chili-in-the-world/">Recipe Source</a></p>
 
     <h2>Ingredients</h2>
         <ul>
@@ -44,8 +45,8 @@
             <li>(Optional) Grated cheese and sour cream for serving</li>
         </ul>
 
-    <h2>Steps</h2>
-        <ol>
+    <h2>Directions</h2>
+        <ol type="I">
             <li>Heat olive oil in a large pot over medium heat. Stir in onion
                 and season with oregano, salt, cumin, and bay leaves. Cook
                 and stir until onion is tender; stir in celery, green bell
@@ -58,6 +59,8 @@
             <li>Stir in the corn, and continue cooking for 5 minutes before 
                 serving.</li>
         </ol>
+
+    <a href="../index.html">Return to Home</a>
     
 </body>
 </html>
