--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/veg-chili.html">Vegetarian Chili</a>
+
+        <ul>
+            <li><a href="recipes/veg-chili.html">Vegetarian Chili</a></li>
+            <li><a href="recipes/cream-puffs.html">Cream Puffs</a></li>
+            <li><a href="recipes/pumpkin-waffles.html">Cinnamon Pumpkin Waffles</a></li>
 
     </body>
 </html>
