complete assignment six and update recipe website

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <head>
         <title>TOP Recipes</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css"
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="main-h">Odin Recipes</h1>
 
-        <ul>
+        <ul class="home-li">
             <li><a href="recipes/veg-chili.html">Vegetarian Chili</a></li>
             <li><a href="recipes/cream-puffs.html">Cream Puffs</a></li>
             <li><a href="recipes/pumpkin-waffles.html">Cinnamon Pumpkin Waffles</a></li>
