--- a/recipes/pumpkin-waffles.html
+++ b/recipes/pumpkin-waffles.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Pumpkin Waffles</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
         <p><a href="https://www.allrecipes.com/recipe/211361/cinnamon-pumpkin-waffles/">
             Recipe Source</a></p>
 
-    <h2>Ingredients</h2>
+    <h2 class="ing">Ingredients</h2>
     <ul>
         <li>1 cup whole wheat flour</li>
         <li>1/4 cup wheat germ</li>
@@ -52,7 +53,9 @@
         iron. Cook the waffles until golden and crisp, 
         5 to 7 minutes.</li>
     </ol>
+    <div class="h-link">
     <a href="../index.html">Return to Home</a>
+    </div>
 
 </body>
 </html>
