--- a/recipes/veg-chili.html
+++ b/recipes/veg-chili.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vegetarian Chili</title>
+    <link rel="stylesheet" href="../style.css"
 </head>
 
 <body>
     <h1> Comforting Vegetarian Chili</h1>
-    <img src="../recipe-img/veg-chili.jpeg" width="525" height="350" alt="Vegetarian chili with black beans
+    <img src="../recipe-img/veg-chili.jpeg" alt="Vegetarian chili with black beans
     and tomatoes, topped with melted cheese,">
 
     <h2>Description</h2>
@@ -21,7 +22,7 @@
         </p>
         <p><a href="https://www.allrecipes.com/recipe/72508/the-best-vegetarian-chili-in-the-world/">Recipe Source</a></p>
 
-    <h2>Ingredients</h2>
+    <h2 class="ing">Ingredients</h2>
         <ul>
             <li>1 tablespoon olive oil</li>
             <li>½ medium onion, chopped</li>
@@ -60,7 +61,9 @@
                 serving.</li>
         </ol>
 
+    <div class="h-link">
     <a href="../index.html">Return to Home</a>
+    </div>
     
 </body>
 </html>
