--- a/recipes/cream-puffs.html
+++ b/recipes/cream-puffs.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Cream Puffs</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
         <p><a href="https://www.allrecipes.com/recipe/15869/cream-puffs/">
             Recipe Source</a></p>
     
-    <h2>Ingredients</h2>
+    <h2 class="ing">Ingredients</h2>
     <ul>
         <li>2 (3.5 ounce) packages instant vanilla pudding mix</li>
         <li>2 cups heavy cream</li>
@@ -51,6 +52,8 @@
             pudding mixture, or use a pastry bag to pipe the pudding into the shells.</li>
 
     </ol>
+    <div class="h-link">
     <a href="../index.html">Return to Home</a>
+    </div>
 </body>
 </html>
